--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/mapped-types": "*",
     "@nestjs/platform-express": "^10.0.0",
     "@prisma/client": "latest",
+    "bcrypt": "^5.1.0",
     "class-validator": "^0.14.0",
     "nestjs-prisma": "^0.21.0",
     "reflect-metadata": "^0.1.13",
@@ -40,6 +41,7 @@
     "@nestjs/cli": "^10.0.0",
     "@nestjs/schematics": "^10.0.0",
     "@nestjs/testing": "^10.0.0",
+    "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
     "@types/node": "^20.3.1",
