feat: signin with jwt

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgresql://MYPOSTGRESUSER:MYPOSTGRESPASSWORD@MYPOSTGRESHOST:5432/socialpostfy?schema=public"
+
+JWT_SECRET="MYJWTSECRET"
